prawie skonczono stylowanie

--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,42 @@ form {
     width: 600px;
     padding: 20px;
 }
+
+ form select, form input[type="text"], form input[type="email"], form textarea {
+     background-color: #4e708c;
+     width: 300px;
+     color: #fff;
+     border: #4e708c 1px solid;
+     height: 25px;
+     margin-bottom: 10px;
+     
+}
+
+form label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+form textarea {
+    line-height: normal;
+}
+
+form select:focus, form input: focus, form textarea:focus {
+    background-color: #4e708c;
+    border: #fff 1px solid;
+    outline: none;
+}
+
+form input[type="submit"] {
+    background-color: #1ac056;
+    border: #2b4a64 1px solid;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    font-weight: 800;
+    cursor: pointer;
+}
+
+form input[type="submit"]:hover {
+    background-color: #46e881;
+}
