--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,40 @@
 form {
     background-color: #213b50;
-    color: white;
+    color: #fff;
     width: 600px;
     padding: 20px;
 }
 
- form select, form input[type="text"], form input[type="email"], form textarea {
-     background-color: #4e708c;
-     width: 300px;
-     color: #fff;
-     border: #4e708c 1px solid;
-     height: 25px;
-     margin-bottom: 10px;
-     
+form input, form select {
+    margin-bottom: 10px;
 }
 
 form label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+}
+
+form select, form input[type="text"], form input[type="tel"],
+form input[type="email"], form textarea {
+    width: 300px;
+    background-color: #2b4a64;
+    color: #fff;
+    border: #2b4a64 1px solid;
+    height: 25px;
 }
 
 form textarea {
     line-height: normal;
 }
 
-form select:focus, form input: focus, form textarea:focus {
+form select:focus, form input:focus, form textarea:focus {
     background-color: #4e708c;
     border: #fff 1px solid;
     outline: none;
+}
+
+form input[type="checkbox"] {
+    float: left;
 }
 
 form input[type="submit"] {
